fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 #root {
   display: flex;
   flex-direction: column;
-
+  /* max-height: 100vh; */
   max-width: 1920px;
   margin: 0 auto;
   padding-left: 2rem;
@@ -24,7 +24,7 @@
 }
 
 .mxh {
-  min-height: calc(100vh - 220px);
+  min-height: calc(100vh - 240px);
 }
 
 footer {
